adds additional images

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang ="en">
 <head>
-  <link href="css/bootstrap.css" rel="stylsheet" type="text">  
-  <link href="styles.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text">  
+  <link href="styles.css" rel="stylesheet" type="text">
   <script src="js/jquery-3.4.1.js"></script> 
   <script src="js/scripts.js"></script>
   <title>Text Adventure</title>
 </head>
 <body>
   <div class="container">
+    <img src="img/AlleyImage.png">
     <div id="text">Text</div>
     <div id="option-button" class="btn-grid">
       <button class="btn">Option 1</button>
